# DetectorMappingVisualizer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  pyproject.toml  requirements.txt  test_resize.py
.github/workflows/: release.yml  tests.yml
detectormappingvisualizer/: __init__.py  data_loader.py  grid_visualization_service.py  gui.py  main.py
examples/: README.md  example_fta_data.json
tests/: __init__.py  test_data_loader.py  test_grid_visualization_service.py  test_gui.py  test_main.py
